--- a/app/assets/styles/modules/_portfolio_section.css
+++ b/app/assets/styles/modules/_portfolio_section.css
@@ -611,7 +611,7 @@
                 width: 100%;
             }
 
-            &.mom {
+            &.narrow {
                 width: 69%;
             }
         }
@@ -623,7 +623,7 @@
                 width: 14%;
                 padding:0
             }
-            &.mom {
+            &.narrow {
                 width: 16%;
                 padding: 5px 0px;
             }
