--- a/app/assets/styles/modules/_client.css
+++ b/app/assets/styles/modules/_client.css
@@ -39,11 +39,12 @@
 
         
         & li{
-            font-size: 1.0rem;
+            font-size: 1.1rem;
             line-height: 2.0rem;
             font-weight: 300;
             position: relative;
             /* white-space: nowrap; */
+            text-indent:-48px;
 
             &::before{
                 content: "";
@@ -104,6 +105,7 @@
         padding: 50px 0;
         display: flex;
         justify-content: center; 
+        align-items: center;
         align-content: center;
         position: relative; 
 
