--- a/app/assets/styles/modules/_work.css
+++ b/app/assets/styles/modules/_work.css
@@ -251,6 +251,9 @@
     .work__container p {
         line-height: 30px;
     }
+    .diff__desc p {
+        font-size: 15px;
+    }
    
 }
 
@@ -267,6 +270,10 @@
         padding-top: 0px;
         padding-bottom: 21px;
     }
+    .work__board--bg{
+        display: flex;
+        align-items: center;
+    }
     .work__container{
         padding:0;
     }
@@ -280,6 +287,7 @@
     }
     .work__board:nth-of-type(even) .work__desc p {
         padding-right: 10px;
+        
     }
     .work__board > .diff__right {
         padding-top: 70px;
@@ -298,6 +306,9 @@
         height: 24%;
     }
     
+    .work__board:nth-of-type(even) .work__desc p {
+        line-height: 136%;
+    }
 }
 @media only screen and (max-width: 768px){
     .work__board {
@@ -333,6 +344,12 @@
     }
     .work__desc {
         padding: 20px 30px;
+    }
+    .diff__desc p {
+        line-height: 170%;
+    }
+    .work__board:nth-of-type(even) .work__desc p {
+        line-height: 170%;
     }
 }
 
