--- a/app/assets/styles/modules/_blog.css
+++ b/app/assets/styles/modules/_blog.css
@@ -137,7 +137,7 @@
         font-style: normal;
         font-weight: 600;
         font-size: 34px;
-        line-height: 26px;
+        line-height: 34px;
         color: #FB5A1E;        
     }
     &__author {
@@ -205,7 +205,7 @@
     }
     .blog__title {
         font-size: 24px;
-        line-height: 26px;
+        line-height: 30px;
     }
     .blog__author {
         line-height: 0;
@@ -315,7 +315,7 @@
         padding: 100px 0 0;
     }
     .blog__text--long {
-        font-size: 13px;
+        font-size: 13px;e
         line-height: 18px;
     }
     .blog__column {
