--- a/app/assets/styles/modules/_blog.css
+++ b/app/assets/styles/modules/_blog.css
@@ -315,7 +315,7 @@
         padding: 100px 0 0;
     }
     .blog__text--long {
-        font-size: 13px;e
+        font-size: 13px;
         line-height: 18px;
     }
     .blog__column {
