--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -41,5 +41,7 @@
 @import 'modules/_redirect.css';
 @import 'modules/_header-case.css';
 @import 'modules/_client.css';
+@import 'Backend/_login.css/';
+@import 'Backend/_dash.css/';
 
 
