--- a/app/assets/styles/modules/_team.css
+++ b/app/assets/styles/modules/_team.css
@@ -30,6 +30,7 @@
             font-size:1.4rem;
             position: absolute;
             top: 50%;
+            white-space: nowrap;
             left: 50%;
             transform: translate(-50%, -50%);
         }
@@ -39,8 +40,8 @@
     &__board {
         display: flex;
         justify-content:space-between;
-        padding: 30px 44px ;
-        width:30%;
+        padding: 0px 10px 10px;
+        width:26%;
         /* border: 1px solid #FB5A1E; */
         box-sizing: border-box;
         border-radius: 30px;
@@ -70,7 +71,7 @@
    }
     
     &__ppic {
-        width: 230px;
+        width: 145px;
         position: relative;
         z-index: 10;
         padding-top: 40px;
@@ -125,7 +126,7 @@
         font-style: normal;
         font-weight: bold;
         font-size: 26px;
-        line-height: 90px;
+        line-height: 35px;
         letter-spacing: -0.02em;
         color: #FB5A1E;
         white-space:nowrap;
@@ -171,6 +172,10 @@
         
         &.xtra {
             padding-bottom: 22px;
+        }
+
+        & span{
+            font-weight: 700;
         }
     }
 
